@@ -1,7 +1,13 @@
-import java.io.*;
+import java.io.BufferedReader;
+import java.io.IOException;
+import java.io.InputStreamReader;
+import java.io.OutputStream;
 import java.net.Socket;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
 
-public class HttpRequestHandler extends Thread {
+public class HttpRequestHandler implements Runnable {
     private final Socket clientSocket;
     private final String directory;
 
@@ -10,57 +16,94 @@ public class HttpRequestHandler extends Thread {
         this.directory = directory;
     }
 
+    @Override
     public void run() {
-        try (BufferedReader clientInputStream = new BufferedReader(new InputStreamReader(clientSocket.getInputStream()));
-             BufferedWriter clientOutputStream = new BufferedWriter(new OutputStreamWriter(clientSocket.getOutputStream()))) {
+        try (BufferedReader reader = new BufferedReader(new InputStreamReader(clientSocket.getInputStream()));
+             OutputStream outputStream = clientSocket.getOutputStream()) {
 
-            String requestLine = clientInputStream.readLine();
+            String requestLine = reader.readLine();
             if (requestLine == null || requestLine.isEmpty()) {
-                sendResponse(clientOutputStream, "HTTP/1.1 400 Bad Request\r\n\r\n");
+                sendBadRequest(outputStream);
                 return;
             }
 
-            String[] requestLineParts = requestLine.split(" ");
-            if (requestLineParts.length < 2) {
-                sendResponse(clientOutputStream, "HTTP/1.1 400 Bad Request\r\n\r\n");
+            String[] requestParts = requestLine.split(" ");
+            if (requestParts.length < 2) {
+                sendBadRequest(outputStream);
                 return;
             }
 
-            String target = requestLineParts[1];
-            if (!target.startsWith("/files/")) {
-                sendResponse(clientOutputStream, "HTTP/1.1 404 Not Found\r\n\r\n");
-                return;
+            String path = requestParts[1];
+            String userAgent = "";
+            String line;
+            while (!(line = reader.readLine()).equals("")) {
+                if (line.startsWith("User-Agent: ")) {
+                    userAgent = line.substring(12);
+                }
             }
 
-            String filename = target.substring("/files/".length());
-            File file = new File(directory, filename);
-
-            if (file.exists() && !file.isDirectory()) {
-                sendFileResponse(clientOutputStream, file);
+            if (path.startsWith("/files/")) {
+                handleFileRequest(path, outputStream);
+            } else if (path.startsWith("/user-agent")) {
+                handleUserAgentRequest(userAgent, outputStream);
+            } else if (path.startsWith("/echo/")) {
+                handleEchoRequest(path, outputStream);
+            } else if (path.equals("/")) {
+                sendOkResponse(outputStream);
             } else {
-                sendResponse(clientOutputStream, "HTTP/1.1 404 Not Found\r\n\r\n");
+                sendNotFound(outputStream);
             }
 
+            outputStream.flush();
         } catch (IOException e) {
-            System.err.println("IOException: " + e.getMessage());
+            System.out.println("IOException: " + e.getMessage());
+        } finally {
+            try {
+                clientSocket.close();
+            } catch (IOException e) {
+                System.out.println("IOException: " + e.getMessage());
+            }
         }
     }
 
-    private void sendFileResponse(BufferedWriter clientOutputStream, File file) throws IOException {
-        try (FileInputStream fileInputStream = new FileInputStream(file)) {
-            byte[] fileContent = fileInputStream.readAllBytes();
-            String responseHeader = String.format(
-                    "HTTP/1.1 200 OK\r\nContent-Type: application/octet-stream\r\nContent-Length: %d\r\n\r\n",
-                    fileContent.length
-            );
-            clientOutputStream.write(responseHeader);
-            clientOutputStream.write(new String(fileContent));
-            clientOutputStream.flush();
+    private void handleFileRequest(String path, OutputStream outputStream) throws IOException {
+        String fileName = path.substring(7);
+        Path filePath = Paths.get(directory, fileName);
+        if (Files.exists(filePath)) {
+            byte[] fileBytes = Files.readAllBytes(filePath);
+            String response = "HTTP/1.1 200 OK\r\nContent-Type: application/octet-stream\r\nContent-Length: " +
+                    fileBytes.length + "\r\n\r\n";
+            outputStream.write(response.getBytes());
+            outputStream.write(fileBytes);
+        } else {
+            sendNotFound(outputStream);
         }
     }
 
-    private void sendResponse(BufferedWriter clientOutputStream, String response) throws IOException {
-        clientOutputStream.write(response);
-        clientOutputStream.flush();
+    private void handleUserAgentRequest(String userAgent, OutputStream outputStream) throws IOException {
+        String response = "HTTP/1.1 200 OK\r\nContent-Type: text/plain\r\nContent-Length: " +
+                userAgent.length() + "\r\n\r\n" + userAgent;
+        outputStream.write(response.getBytes());
+    }
+
+    private void handleEchoRequest(String path, OutputStream outputStream) throws IOException {
+        String randomString = path.substring(6);
+        String response = "HTTP/1.1 200 OK\r\nContent-Type: text/plain\r\nContent-Length: " +
+                randomString.length() + "\r\n\r\n" + randomString;
+        outputStream.write(response.getBytes());
+    }
+
+    private void sendOkResponse(OutputStream outputStream) throws IOException {
+        outputStream.write("HTTP/1.1 200 OK\r\n\r\n".getBytes());
+    }
+
+    private void sendBadRequest(OutputStream outputStream) throws IOException {
+        outputStream.write("HTTP/1.1 400 Bad Request\r\n\r\n".getBytes());
+        outputStream.flush();
+    }
+
+    private void sendNotFound(OutputStream outputStream) throws IOException {
+        outputStream.write("HTTP/1.1 404 Not Found\r\n\r\n".getBytes());
+        outputStream.flush();
     }
 }
